<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/dialog_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/appIcon"
            android:layout_width="@dimen/dialog_icon_size"
            android:layout_height="@dimen/dialog_icon_size"
            android:scaleType="fitCenter"
            android:importantForAccessibility="no" />

        <TextView
            android:id="@+id/appLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/dialog_label_margin_start"
            android:maxLines="1"
            android:ellipsize="end"
            android:textColor="@color/on_surface"
            android:textSize="@dimen/text_dialog_label"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/actionAppInfo"
        style="@style/Widget.MotoLauncher.DialogAction"
        android:text="@string/tile_action_app_info" />

    <TextView
        android:id="@+id/actionUninstall"
        style="@style/Widget.MotoLauncher.DialogAction"
        android:text="@string/tile_action_uninstall" />

    <TextView
        android:id="@+id/actionHide"
        style="@style/Widget.MotoLauncher.DialogAction"
        android:text="@string/tile_action_hide" />

    <TextView
        android:id="@+id/actionReassign"
        style="@style/Widget.MotoLauncher.DialogAction"
        android:text="@string/tile_action_reassign" />

    <TextView
        android:id="@+id/actionEditLink"
        style="@style/Widget.MotoLauncher.DialogAction"
        android:text="@string/link_action_edit" />

    <TextView
        android:id="@+id/actionRemoveLink"
        style="@style/Widget.MotoLauncher.DialogAction"
        android:text="@string/link_action_remove" />
</LinearLayout>
