<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    android:padding="@dimen/screen_padding">

    <de.codevoid.motolauncher.ui.TouchOnlyRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/header_margin_bottom"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="@dimen/back_button_size"
            android:layout_height="@dimen/back_button_size"
            android:layout_marginEnd="@dimen/back_button_margin_end"
            android:background="?attr/selectableItemBackground"
            android:src="@drawable/ic_back"
            android:contentDescription="@string/back"
            android:scaleType="center" />

        <EditText
            android:id="@+id/searchBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/tile_background"
            android:padding="@dimen/search_padding"
            android:hint="@string/search_hint"
            android:inputType="text"
            android:imeOptions="actionSearch"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/on_surface"
            android:textColorHint="@color/on_surface_muted"
            android:textSize="@dimen/text_search"
            android:importantForAutofill="no" />

        <!-- Browse mode only; hidden as one group while picking an app for a slot. -->
        <Button
            android:id="@+id/settingsButton"
            style="@style/Widget.MotoLauncher.HeaderButton"
            android:text="@string/settings" />
    </de.codevoid.motolauncher.ui.TouchOnlyRow>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/appGrid"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clipToPadding="false"
        android:focusable="false"
        android:descendantFocusability="afterDescendants" />
</LinearLayout>
